[package]
name = "sway-alttab"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev-rs = "0.6.1"
libc = "0.2.147"
swayipc = "3.0.1"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.4", features = ["derive"] }

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
