[package]
name = "swaywm-alttab"
version = "0.3.1"
description = "A tool which brings familiar Alt-Tab shortcut to Sway WM workspaces on Linux"
repository = "https://github.com/ar7eniyan/swaywm-alttab"
keywords = ["linux", "wayland", "keyboard-shortcut"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
evdev-rs = "0.6.1"
libc = "0.2.147"
swayipc = "3.0.1"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.4", features = ["derive"] }

[profile.release]
strip = true
panic = 'abort'

[profile.dev]
panic = 'abort'
