[package]
name = "swaywm-alttab"
version = "0.3.2"
description = "A tool which brings familiar Alt-Tab shortcut to Sway WM workspaces on Linux"
repository = "https://github.com/ar7eniyan/swaywm-alttab"
keywords = ["linux", "wayland", "keyboard-shortcut"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
evdev-rs = "0.6.1"
libc = "0.2.147"
swayipc = "3.0.1"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.4", features = ["derive"] }
wayland-client = "0.31.1"
smithay-client-toolkit = "0.18.0"
wayland-protocols-wlr = "0.2.0"
nix = { version = "0.27.1", features = ["fs"]}
tiny-skia = "0.11.2"

[profile.release]
strip = true
panic = 'abort'

[profile.dev]
panic = 'abort'
